Fix long text overflow

--- a/frontend/src/global_styles/content/_attributes_key_value.sass
+++ b/frontend/src/global_styles/content/_attributes_key_value.sass
@@ -78,6 +78,7 @@
     // There problably is some calculation by which you can derive this,
     // but I'm currently too lazy to figure it out
     flex-basis: 708px
+    max-width: 100%
 
 // Alternative implementation to the one above.
 // It's main advantage is that it can act on the whole of the key/value-pairs.
